<a download> is not respected when there is a redirection
Categories
(Core :: Networking, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox87 | --- | fixed |
People
(Reporter: jc, Assigned: kershaw)
References
Details
(Whiteboard: [necko-triaged])
Attachments
(1 file)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/88.0.4324.96 Safari/537.36 Edg/88.0.705.50
Steps to reproduce:
There is a <a download> that links to /api/foo/data.
/api/foo/data 302 redirects to /api/foo/data?token=bar, which returns Content-Disposition: inline.
Actual results:
Firefox tries to open the content inline.
Expected results:
This is inconsistent with the generally accepted behavior that client preference (download attribute of <a>) should be prioritized. See 1658877.
Safari and Chromium respects download and tries to download the content.
Comment 1•5 years ago
|
||
Do you have a live testcase that could be used for this bug?
Updated•5 years ago
|
| Reporter | ||
Comment 2•5 years ago
|
||
(In reply to :Gijs (he/him) from comment #1)
Do you have a live testcase that could be used for this bug?
| Assignee | ||
Comment 3•5 years ago
|
||
(In reply to Jesse Chan from comment #2)
(In reply to :Gijs (he/him) from comment #1)
Do you have a live testcase that could be used for this bug?
Thanks. I'll take a look at this.
| Assignee | ||
Comment 4•5 years ago
|
||
Updated•5 years ago
|
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Updated•5 years ago
|
Comment 6•5 years ago
|
||
| bugherder | ||
Description
•