Bug 1689018 - Convey content disposition information to new redirect channel r=necko-reviewers,Gijs,valentin

Differential Revision: https://phabricator.services.mozilla.com/D104061